# embedded-system-kata

./: .gitignore  CMakeLists.txt  Makefile  README.md  avr-gcc-toolchain.cmake  build_all.sh  cmake_build_all.sh  cppcheck-suppressions.txt
.github/workflows/: avr-build.yml  avr-cppcheck-workflow.yml  avr-gcc-build-workflow.yml
00_bringup/: exercise.md  exercise.mk
01_blinky_timer/: exercise.md  exercise.mk
01_blinky_timer/src/: main.c_alternate_solution
02_sos/: exercise.md  exercise.mk
02_sos/src/: main.c
03_hello_morse/: exercise.md  exercise.mk
03_hello_morse/src/: main.c  morse.c  morse.h  morse_alphabet.c  morse_alphabet.h  morse_timings.h
04_morse_c_str/: exercise.md  exercise.mk
04_morse_c_str/src/: main.c
05_hello_uart/: exercise.mk
05_hello_uart/src/: main.c
06_uart_echo/: exercise.md  exercise.mk
06_uart_echo/src/: main.c
07_sentence_statistics/: CMakeLists.txt  exercise.md  exercise.mk
07_sentence_statistics/src/: main.c
08_morse_encoder/: CMakeLists.txt  exercise.md  exercise.mk
common/: CMakeLists.txt
common/build-files/: compiler_flags.mk  toolchain.mk
common/linker/: avr.ld
common/src/: types.h
common/src/bsp/: bsp.c  bsp.h  crt0.c  crt0.s  reg_io.h  sw_timers.c
common/src/bsp/private/startup/: crt0.c
common/src/bsp/private/timer/: timer.c
common/src/bsp/private/uart/: uart.c  uart.c.poll
common/src/utils/: ascii_char.c  ascii_char.h  private_ring.h
exercises/: CMakeLists.txt
exercises/00_bringup/: CMakeLists.txt  exercise.md
exercises/00_bringup/src/: main.cpp
exercises/01_blinky_timer/: CMakeLists.txt  exercise.md  ocra_calculator.xlsx
exercises/01_blinky_timer/src/: main.c
exercises/02_sos/: CMakeLists.txt
exercises/03_hello_morse/: CMakeLists.txt
exercises/03_hello_morse/src/: main.c
exercises/04_morse_c_str/: CMakeLists.txt  exercise.md
exercises/04_morse_c_str/src/: main.c
exercises/05_hello_uart/: CMakeLists.txt  exercise.md
exercises/05_hello_uart/src/: main.c
exercises/06_uart_echo/: CMakeLists.txt  exercise.md
exercises/07_sentence_statistics/: CMakeLists.txt
exercises/07_sentence_statistics/src/: statistics.c
exercises/08_morse_encoder/: CMakeLists.txt  exercise.md
exercises/common/: CMakeLists.txt
exercises/common/src/bsp/: bsp.c  sw_timers.c
exercises/common/src/bsp/private/data_types/: int_types.h
exercises/common/src/bsp/private/processor/: reg_io.h
exercises/common/src/bsp/private/timer/: timer.c  timer.h
exercises/common/src/bsp/private/uart/: uart.c.poll  uart.h
exercises/common/src/morse/: task.c
scripts/: loader.py
