#
# Add the common directory and individual exercise directories to the build.
#
add_subdirectory(common)
add_subdirectory(01_blinky_timer)
add_subdirectory(02_sos)
add_subdirectory(03_hello_morse)
add_subdirectory(04_morse_c_str)
add_subdirectory(05_hello_uart)
add_subdirectory(06_uart_echo)
add_subdirectory(07_sentence_statistics)
add_subdirectory(08_morse_encoder)
